# project_2048

./: .gitignore  README.md  base_agents_example.ipynb  experiment.ipynb  interpretable_agents.ipynb  pyproject.toml
data/: weights_ep5000.pth
notebooks/: base_agents_example.ipynb  create_dataset.ipynb
simulations/: __init__.py  agents.py  base_agents.py  features.py  interpretable_agents.py  run.py  train_agents.py  vizualize_grid.py
