[project]
name = "project-2048"
version = "0.1.0"
description = "find interpretable strategy in 2048 game"
authors = [
    {name = "Polina Volodchenko",email = "volodchenko_02@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "gym (>=0.26.2,<0.27.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "gymnasium-2048 (>=0.0.2,<0.0.3)",
    "gplearn (>=0.4.2,<0.5.0)",
    "torch (>=2.7.0,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "tensorflow-io-gcs-filesystem (==0.31.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "numba (>=0.61.2,<0.62.0)",
    "cma (>=4.2.0,<5.0.0)",
    "pysr (>=1.5.8,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
